--- a/core/main/templates/base.html
+++ b/core/main/templates/base.html
@@ -127,11 +127,6 @@
 								<li class="dropdown"><a href="{% url 'product' %}">Shop<i class="fa fa-angle-down"></i></a>
                                     <ul role="menu" class="sub-menu">
                                         <li><a href="{% url 'product' %}">Products</a></li>
-										<li><a href="#">Product Details</a></li> 
-										<li><a href="checkout.html">Checkout</a></li> 
-										<li><a href="cart.html">Cart</a></li> 
-										<li><a href="{% url 'register' %}">Register</a></li> 
-										<li><a href="{% url 'login' %}">Login</a></li> 
                                     </ul>
                                 </li> 
 								<li class="dropdown"><a href="#">Blog<i class="fa fa-angle-down"></i></a>
@@ -207,10 +202,11 @@
                              <b class="pull-left">$ 0</b> <b class="pull-right">$ 600</b>
                         </div>
                     </div><!--/price-range-->
-                    
+                    {% for i in ships %}
                     <div class="shipping text-center"><!--shipping-->
-                        <img src="images/home/shipping.jpg" alt="" />
+                        <img src="{{ i.img.url }}" alt="" />
                     </div><!--/shipping-->
+                    {% endfor %}
                 </div>
 
             </div>
